--- a/style.css
+++ b/style.css
@@ -14,6 +14,13 @@ body {
     background: transparent; /* опционально */
 }
 
+a, a:hover {
+    color: white;
+    font-size: 16px;
+}
+
+
+
 html {
     -ms-overflow-style: none; /* IE 10+ */
     scrollbar-width: none; /* Firefox */
@@ -28,7 +35,7 @@ code {
 .index2 {
     height: 300px;
     width: 100%;
-    background-image: linear-gradient(to top, #20232A 0%, transparent 50%), url('./images/bg.jpg');
+    background-image: linear-gradient(to top, #20232A 0%, transparent 50%), url('./images/bg.png');
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -47,6 +54,8 @@ code {
     text-align: center;
     color: white;
 }
+
+
 
 .imageBody {
     margin: 50px auto 0px auto;
@@ -715,6 +724,10 @@ code {
     color: rgba(245, 222, 179, 0.295);
 }
 
+.welcome img {
+    width: 600px;
+}
+
 .theory {
     max-width: 900px;
     margin: 0 auto;
@@ -805,3 +818,70 @@ code {
 .ContainerProgramm {
     margin-bottom: 70px;
 }
+
+
+.preloader {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background: #20232A;
+    z-index: 1001;
+  }
+
+  .preloader__row {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    width: 70px;
+    height: 70px;
+    margin-top: -35px;
+    margin-left: -35px;
+    text-align: center;
+    animation: preloader-rotate 2s infinite linear;
+  }
+
+  .preloader__item {
+    position: absolute;
+    display: inline-block;
+    top: 0;
+    background-color: #337ab7;
+    border-radius: 100%;
+    width: 35px;
+    height: 35px;
+    animation: preloader-bounce 2s infinite ease-in-out;
+  }
+
+  .preloader__item:last-child {
+    top: auto;
+    bottom: 0;
+    animation-delay: -1s;
+  }
+
+  @keyframes preloader-rotate {
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+  @keyframes preloader-bounce {
+
+    0%,
+    100% {
+      transform: scale(0);
+    }
+
+    50% {
+      transform: scale(1);
+    }
+  }
+
+  .loaded_hiding .preloader {
+    transition: 0.3s opacity;
+    opacity: 0;
+  }
+
+  .loaded .preloader {
+    display: none;
+  }
